--- a/workflow/envs/kegg_pathway.yaml
+++ b/workflow/envs/kegg_pathway.yaml
@@ -1,10 +1,9 @@
 channels:
-  - r
   - conda-forge
   - bioconda
+  - r
   - defaults
 dependencies:
-  - r-base=4.1.2
-  - r-pathfindr
+  - r-base
   - r-ggraph
-  - bioconductor-pathfindr
+  - r-pathfindr
